# antftp

./: .gitignore  .output.txt  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
.junie/: guidelines.md
crates/unftp-sbe-anttp/: Cargo.toml  build.rs
crates/unftp-sbe-anttp/proto/: public_data.proto
crates/unftp-sbe-anttp/src/: ext.rs  lib.rs  proto.rs
proto/: pnr.proto  pointer.proto  public_archive.proto  tarchive.proto
spec/: 00001_replace_skeleton_unftp_sbe_anttp_code_with_an_anttp_protobuf_integration.txt  00003_add_basic_ci_cd_workflow.txt  00005_create_integration_test_to_validate_get_and_list_support.txt  00007_add_support_for_del_ftp_command.txt  00008_update_list_commands_to_support_additional_item_metadata.txt  00009_add_support_for_put_and_mkd_ftp_command.txt  00012_update_tarchive_and_public_archive_protos_and_impacted_code.txt  00016_support_pointers_to_public_archives_to_be_used_to_specify_the_archive.txt  00018_resolve_address_from_pointer_before_every_read_operation.txt  00022_push_changes_to_network_on_a_regular_schedule.txt  00024_add_logging_and_improve_documentation.txt  00026_replace_publicarchive_with_archive.txt
src/: main.rs
tests/: get_list_integration.rs
