[package]
name = "antftp"
version = "0.1.10"
edition = "2024"
authors = ["Paul Green"]
description = "AntFTP is a FTP server companion app for AntTP"
readme = "README.md"
repository = "https://github.com/traktion/antftp"
license = "Apache-2.0"
keywords = ["anttp", "ftp", "autonomi"]
categories = ["network-programming", "command-line-utilities"]
exclude = [".github", ".gitignore", "target/"]

[dependencies]
libunftp = { version = "0.21.1", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12", "std"] }
tokio = { version = "1", features = ["full"] }
unftp-sbe-anttp = { version = "0.1.0", path = "crates/unftp-sbe-anttp" }
tonic = { version = "0.12", features = ["router"] }
prost = { version = "0.13"}
clap = { version = "4.5.57", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tonic-build = { version = "0.12" }

[dev-dependencies]
unftp-sbe-anttp = { path = "crates/unftp-sbe-anttp" }
suppaftp = { version = "6.2.0", features = ["async"] }
tokio-stream = "0.1"
async-std = { version = "1.13", features = ["attributes"] }
serial_test = "3.2.0"
