[package]
name = "unftp-sbe-anttp"
version = "0.1.9"
edition = "2024"
authors = ["Paul Green"]
description = "unFTP server library for connecting with AntTP"
repository = "https://github.com/traktion/antftp"
license = "Apache-2.0"
keywords = ["anttp", "ftp", "autonomi"]
categories = ["network-programming", "command-line-utilities"]
exclude = [".github", ".gitignore", "target/"]

[dependencies]
async-trait = "=0.1.88"
cfg-if = "1.0"
cap-std = "4.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
lazy_static = "1.5.0"
libunftp = "0.21.1"
tokio = { version = "1.48.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
tokio-stream = "0.1.17"
tonic = { version = "0.12" }
prost = { version = "0.13" }
log = "0.4"

[build-dependencies]
tonic-build = "0.12"